--- a/app/views/partials/navBar.ejs
+++ b/app/views/partials/navBar.ejs
@@ -1,6 +1,6 @@
 <nav class="navBar">
-  <a href="#" class="heading4">Projets</a>
-  <a href="#" class="heading4">Expériences pro</a>
+  <a href="#projectSection" class="heading4">Projets</a>
+  <a href="#experienceSection" class="heading4">Expériences pro</a>
   <a href="#" class="heading4">Formations</a>
   <a href="#" class="heading4">Compétences</a>
   <a href="#" class="heading4">Contact</a>
