--- a/app/views/pages/homepage.ejs
+++ b/app/views/pages/homepage.ejs
@@ -28,7 +28,6 @@
         </button>
       </div>
     </section>
-
     <section class="projectSection" id="projectSection">
       <div class="blockTitle">
         <h3 class="bigTitle">Mes projets</h3>
@@ -65,6 +64,35 @@
         <% for (const formation of listFormation) { %> 
           <%-include('../layouts/blockInfos.ejs', {data: formation}) %> 
         <% } %>
+      </div>
+    </section>
+    <section class="skillSection" id="skillSection">
+      <h3 class="bigTitle">Mes compétences</h3>
+      <div class="groupSkills">
+        <% for (const skills of listSkills) { %>
+          <%- include('../layouts/listSkills.ejs', {skills: skills}) %>
+        <% } %>
+      </div>
+    </section>
+    <section class="contactSection" id="contactSection">
+      <div>
+        <h3 class="bigTitle">Contact</h3>
+        <%- include('../partials/navBar-socialLink.ejs', {type: 'default'}) %>
+      </div>
+      <div>
+        <p class="heading4">
+          <span class="icon">
+            <%-include('../../../public/svg/icône mail.svg') %>
+          </span>
+          lemort.olivier.pro@gmail.compétences
+        </p>
+        <p class="heading4">
+          <span class="icon">
+            <%-include('../../../public/svg/icône tel.svg') %>
+          </span>
+          07.63.49.12.06
+        </p>
+        <button class="button">Me contacter</button>
       </div>
     </section>
   </body>
